# metacpp

./: .gitignore  CMakeLists.txt  README.md
src/: all_meta.h  design.h  design.meta.h  main.cpp  meta.cpp  meta.h
src/meta/: meta.cpp  meta.h
src/meta.gen/: all_meta.h  design.meta.h
